--- a/01-HTML_Level_One/Part1_html_basics.html
+++ b/01-HTML_Level_One/Part1_html_basics.html
@@ -9,16 +9,20 @@
   </head>
   <body>
     <h1><em>Welcome!</em></h1>
+    <form>
+      <h3>Pick a Background Color</h3>
+      <input type="color" name="bkgncolor" value="">
+    </form>
     <div>
       <h4><strong> Github </strong></h4>
     </div>
     <div class="skillset">
       <h5>Skills: <br>
-      <ol>
+      <ul>
         <li>Java</li>
         <li>Python</li>
         <li>RESTApi</li>
-      </ol>
+      </ul>
      </h5>
     </div>
     <div>
