form selections and linking

--- a/01-HTML_Level_One/Part1_html_basics.html
+++ b/01-HTML_Level_One/Part1_html_basics.html
@@ -11,10 +11,15 @@
     <h1><em>Welcome!</em></h1>
     <form>
       <h3>Pick a Background Color</h3>
-      <input type="color" name="bkgncolor" value="">
+      <input id="colorwheel" type="color" name="bkgncolor" value="">
     </form>
     <div>
-      <h4><strong> Github </strong></h4>
+      <h4><strong> <a href="https://github.com/jeremiahe00">Github</a> </strong></h4>
+      <select name="projects">
+        <option name="Project1">project1</option>
+        <option name="Project2">project2</option>
+        <option name="Project3">project2</option>
+      </select>
     </div>
     <div class="skillset">
       <h5>Skills: <br>
