--- a/01-HTML_Level_One/Portfolio.html
+++ b/01-HTML_Level_One/Portfolio.html
@@ -6,6 +6,7 @@
     <!-- Use cmd+/ to get the html comment line -->
     <meta charset="utf-8">
     <title> Jeremiah's Portfolio </title>
+    <link rel="stylesheet" href="Portfolio_master.css">
   </head>
   <body>
     <h1><em>Welcome!</em></h1>
