added class element to css

--- a/01-HTML_Level_One/Portfolio.html
+++ b/01-HTML_Level_One/Portfolio.html
@@ -14,7 +14,7 @@
       <h3>Pick a Background Color</h3>
       <input id="colorwheel" type="color" name="bkgncolor" value="">
     </form>
-    <div>
+    <div class="main">
       <h4><strong> <a href="https://github.com/jeremiahe00">Github</a> </strong></h4>
       <select name="projects">
         <option name="Project1">project1</option>
@@ -22,7 +22,7 @@
         <option name="Project3">project2</option>
       </select>
     </div>
-    <div class="skillset">
+    <div class="main">
       <h5>Skills: <br>
       <ul>
         <li>Java</li>
@@ -31,17 +31,17 @@
       </ul>
      </h5>
     </div>
-    <div>
+    <div class="main">
       <h4><strong> <span>Email</span> </strong></h4>
       <h4><strong> <span> <a href="https://www.linkedin.com/in/jeremiaherome/">LinkedIn</a></span> </strong></h4>
     </div>
     <br>
     <br>
     <br>
-    <h5><em>Career Summary</em>: </h5><p>Words </p>
+    <h5><em>Career Summary</em>: </h5><p id="text">Words </p>
     <br>
     <br>
-    <h5><em>Goals / Objectives</em>: </h5><p>Words </p>
+    <h5><em>Goals / Objectives</em>: </h5><p id="text">Words </p>
     
     
     <!-- The body contains the actual content -->
