--- a/01-HTML_Level_One/Portfolio.html
+++ b/01-HTML_Level_One/Portfolio.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!--  The head contains Meta-data -->
-    <!-- Use html+Tab to get the boilerplate  -->
-    <!-- Use cmd+/ to get the html comment line -->
-    <meta charset="utf-8">
-    <title> Jeremiah's Portfolio </title>
-    <link rel="stylesheet" href="Portfolio_master.css">
-  </head>
-  <body>
-    <h1><em>Welcome to Jeremiah's Portfolio!</em></h1>
-    <form>
-      <h3>Pick a Background Color</h3>
-      <input id="colorwheel" type="color" name="bkgncolor" value="">
-    </form>
-    <div class="mainParent">
-      
+
+<head>
+  <!--  The head contains Meta-data -->
+  <!-- Use html+Tab to get the boilerplate  -->
+  <!-- Use cmd+/ to get the html comment line -->
+  <meta charset="utf-8">
+  <title> Jeremiah's Portfolio </title>
+  <link rel="stylesheet" href="Portfolio_master.css">
+</head>
+
+<body>
+  <h1><em>Welcome to Jeremiah's Portfolio!</em></h1>
+  <form>
+    <h3>Pick a Background Color</h3>
+    <input id="colorwheel" type="color" name="bkgncolor" value="">
+  </form>
+  <div class="mainParent">
+
     <div class="main" id="main1">
       <h4><strong> <a href="https://github.com/jeremiahe00" rel="noopener" target="_blank">Github</a> </strong></h4>
       <select name="projects">
@@ -68,31 +70,40 @@
             </td>
           </tr>
         </table>
-     </h5>
+      </h5>
     </div>
     <div class="main" id="main3">
-      <h4><strong> <span>Email</span> </strong></h4>
-      <h4><strong> <span> <a href="https://www.linkedin.com/in/jeremiaherome/" rel="noopener" target="_blank">LinkedIn</a></span> </strong></h4>
+      <h4 id="email"><strong>jeremiaheu0@gmail.com</strong></h4>
+      <h4><strong><a href="https://www.linkedin.com/in/jeremiaherome/" rel="noopener"
+            target="_blank">LinkedIn</a></strong></h4>
     </div>
   </div>
-    <br>
-    <br>
-    <br>
-    <h5><em>Career Summary</em>: </h5><p id="text">•	Implementing secure & reliable APIs/Apps and modifying existing APIs/Apps<br>
-      Major Project A<br>
-      •	Designed & implemented an API that pulls data from 8 downstream services (External/Internal APIs & Oracle DB), filters\consolidates all of the client’s data and returns it to the UI<br>
-      •	Variety of exception handling, such as client level vs account level failures/successes and case-by-case logic implemented<br>
-      •	Reduced latency from 10-15s to 0.5-3s<br>
-      •	Deployed nation-wide and used by millions of clients daily<br>
-      Major Project B<br>
-      •	Led, Designed & implemented an API that pulls client’s account data from multiple external remote files<br>
-      •	Parses through all the data with scheduling and apply required logic for specific criteria<br>
-      •	Consolidates & POSTs the data to an external API with appropriate exception handling and an email system for failures and successes<br>
-       </p>
-    <br>
-    <br>
-    <h5><em>Goals / Objectives</em>: </h5><p id="text">Actively looking into getting myself into the Artificial Intelligence field and would like to work with robotics, ML/DL, expert systems, language processing and more. 
-      Currently building Python projects which includes Full-Stack development to solidify my foundation, then I will move onto AI specific libraries to reach the above goal. </p>
+  <br>
+  <br>
+  <br>
+  <h5><em>Career Summary</em>: </h5>
+  <p id="text">• Implementing secure & reliable APIs/Apps and modifying existing APIs/Apps<br>
+    Major Project A<br>
+    • Designed & implemented an API that pulls data from 8 downstream services (External/Internal APIs & Oracle DB),
+    filters\consolidates all of the client’s data and returns it to the UI<br>
+    • Variety of exception handling, such as client level vs account level failures/successes and case-by-case logic
+    implemented<br>
+    • Reduced latency from 10-15s to 0.5-3s<br>
+    • Deployed nation-wide and used by millions of clients daily<br>
+    Major Project B<br>
+    • Led, Designed & implemented an API that pulls client’s account data from multiple external remote files<br>
+    • Parses through all the data with scheduling and apply required logic for specific criteria<br>
+    • Consolidates & POSTs the data to an external API with appropriate exception handling and an email system for
+    failures and successes<br>
+  </p>
+  <br>
+  <br>
+  <h5><em>Goals / Objectives</em>: </h5>
+  <p id="text">Actively looking into getting myself into the Artificial Intelligence field and would like to work with
+    robotics, ML/DL, expert systems, language processing and more.
+    Currently building Python projects which includes Full-Stack development to solidify my foundation, then I will move
+    onto AI specific libraries to reach the above goal. </p>
 
-  </body>
+</body>
+
 </html>
