--- a/01-HTML_Level_One/Portfolio.html
+++ b/01-HTML_Level_One/Portfolio.html
@@ -6,104 +6,135 @@
   <!-- Use html+Tab to get the boilerplate  -->
   <!-- Use cmd+/ to get the html comment line -->
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
   <title> Jeremiah's Portfolio </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="Portfolio_master.css">
 </head>
 
 <body>
   <h1><em>Welcome to Jeremiah's Portfolio!</em></h1>
   <form>
-    <h3>Pick a Background Color</h3>
-    <input id="colorwheel" type="color" name="bkgncolor" value="">
+    <label for="colorwheel" class="form-label">
+      <h3>Pick a Background Color</h3>
+    </label>
+    <input id="colorwheel" type="color" class="form-control-color" name="bkgncolor" value="#39e3fa">
   </form>
-  <div class="mainParent">
+  <div class="container">
+    <div class="mainParent">
+      <div class="row">
+        <div class="col-lg-3 col-md-12 col-sm-12">
+          <div class="main" id="main1">
+            <h5><strong> <a href="https://github.com/jeremiahe00" rel="noopener" target="_blank">Github</a> </strong>
+            </h5>
+            <select name="projects" class="form-select">
+              <option selected>Select Project</option>
+              <option name="Project1">A-star-PathFinding</option>
+              <option name="Project2">MazeOfAtlantis</option>
+              <option name="Project3">MultiFunction-program</option>
+              <option name="Project3">python-projects</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-lg-5 col-md-12 col-sm-12">
+          <div class="main" id="main2">
+            <h5>Main Skills:</h5>
+            <h6>
+              <div class="row">
 
-    <div class="main" id="main1">
-      <h4><strong> <a href="https://github.com/jeremiahe00" rel="noopener" target="_blank">Github</a> </strong></h4>
-      <select name="projects">
-        <option name="Project1">project1</option>
-        <option name="Project2">project2</option>
-        <option name="Project3">project2</option>
-      </select>
+                <!-- <table>
+                  <tr> -->
+                <div class="col-xl-3 col-lg-4 col-md-3 col-sm-12">
+                  <!-- <td> -->
+                  <ul>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>C++</li>
+                    <li>HTML</li>
+                    <li>JS</li>
+                    <li>CSS</li>
+                    <li>SQL</li>
+                    <li>AWS</li>
+                    <li>Flask</li>
+                  </ul>
+                  <!-- </td> -->
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                  <!-- <td> -->
+                  <ul>
+                    <li>Jupyter Notebook</li>
+                    <li>PyCharm</li>
+                    <li>VS Code</li>
+                    <li>Spring Boot</li>
+                    <li>(My)SQL</li>
+                    <li>RESTApi</li>
+                    <li>Apache Maven</li>
+                    <li>Design Patterns</li>
+                  </ul>
+                  <!-- </td> -->
+                </div>
+                <div class="col-xl-5 col-lg-4 col-md-5 col-sm-12">
+                  <!-- <td> -->
+                  <ul>
+                    <li>Scrum/Sprint Planning</li>
+                    <li>Agile Methodologies</li>
+                    <li>SFTP Polling</li>
+                    <li>Kafka producing/consuming</li>
+                    <li>Jenkins</li>
+                    <li>UrbanCode Deploy</li>
+                    <li>PCF</li>
+                    <li>A* Path Finding algorithm</li>
+                    <li>Robot Motion Planning</li>
+                  </ul>
+                  <!-- </td> -->
+                </div>
+                <!-- </tr>
+                </table> -->
+
+              </div>
+            </h6>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12">
+          <div class="main" id="main3">
+            <h5 id="email"><strong>jeremiaheu0@gmail.com</strong></h5>
+            <h5><strong><a href="https://www.linkedin.com/in/jeremiaherome/" rel="noopener"
+                  target="_blank">LinkedIn</a></strong></h5>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="main" id="main2">
-      <h4>Main Skills:</h4>
-      <h5>
-        <table>
-          <tr>
-            <td>
-              <ul>
-                <li>Java</li>
-                <li>Python</li>
-                <li>C++</li>
-                <li>HTML</li>
-                <li>JS</li>
-                <li>CSS</li>
-                <li>SQL</li>
-                <li>AWS</li>
-              </ul>
-            </td>
-            <td>
-              <ul>
-                <li>Flask</li>
-                <li>Jupyter Notebook</li>
-                <li>PyCharm</li>
-                <li>VS Code</li>
-                <li>Spring Boot</li>
-                <li>(My)SQL</li>
-                <li>RESTApi</li>
-                <li>Apache Maven</li>
-              </ul>
-            </td>
-            <td>
-              <ul>
-                <li>Design Patterns/Architecture</li>
-                <li>Scrum/Sprint Planning/Agile Methodologies</li>
-                <li>SFTP Polling</li>
-                <li>Kafka producing & consuming</li>
-                <li>Jenkins</li>
-                <li>UrbanCode Deploy</li>
-                <li>PCF</li>
-                <li>A* Path Finding algorithm</li>
-                <li>Robot Motion Planning</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
-      </h5>
-    </div>
-    <div class="main" id="main3">
-      <h4 id="email"><strong>jeremiaheu0@gmail.com</strong></h4>
-      <h4><strong><a href="https://www.linkedin.com/in/jeremiaherome/" rel="noopener"
-            target="_blank">LinkedIn</a></strong></h4>
-    </div>
+    <br>
+    <br>
+    <br>
+    <h5><em>Career Summary</em>: </h5>
+    <p id="text">• Implementing secure & reliable APIs/Apps and modifying existing APIs/Apps<br>
+      Major Project A<br>
+      • Designed & implemented an API that pulls data from 8 downstream services (External/Internal APIs & Oracle DB),
+      filters\consolidates all of the client’s data and returns it to the UI<br>
+      • Variety of exception handling, such as client level vs account level failures/successes and case-by-case logic
+      implemented<br>
+      • Reduced latency from 10-15s to 0.5-3s<br>
+      • Deployed nation-wide and used by millions of clients daily<br>
+      Major Project B<br>
+      • Led, Designed & implemented an API that pulls client’s account data from multiple external remote files<br>
+      • Parses through all the data with scheduling and apply required logic for specific criteria<br>
+      • Consolidates & POSTs the data to an external API with appropriate exception handling and an email system for
+      failures and successes<br>
+    </p>
+    <br>
+    <br>
+    <h5><em>Goals / Objectives</em>: </h5>
+    <p id="text">Actively looking into getting myself into the Artificial Intelligence field and would like to work with
+      robotics, ML/DL, expert systems, language processing and more.
+      Currently building Python projects which includes Full-Stack development to solidify my foundation, then I will
+      move
+      onto AI specific libraries to reach the above goal. </p>
+
   </div>
-  <br>
-  <br>
-  <br>
-  <h5><em>Career Summary</em>: </h5>
-  <p id="text">• Implementing secure & reliable APIs/Apps and modifying existing APIs/Apps<br>
-    Major Project A<br>
-    • Designed & implemented an API that pulls data from 8 downstream services (External/Internal APIs & Oracle DB),
-    filters\consolidates all of the client’s data and returns it to the UI<br>
-    • Variety of exception handling, such as client level vs account level failures/successes and case-by-case logic
-    implemented<br>
-    • Reduced latency from 10-15s to 0.5-3s<br>
-    • Deployed nation-wide and used by millions of clients daily<br>
-    Major Project B<br>
-    • Led, Designed & implemented an API that pulls client’s account data from multiple external remote files<br>
-    • Parses through all the data with scheduling and apply required logic for specific criteria<br>
-    • Consolidates & POSTs the data to an external API with appropriate exception handling and an email system for
-    failures and successes<br>
-  </p>
-  <br>
-  <br>
-  <h5><em>Goals / Objectives</em>: </h5>
-  <p id="text">Actively looking into getting myself into the Artificial Intelligence field and would like to work with
-    robotics, ML/DL, expert systems, language processing and more.
-    Currently building Python projects which includes Full-Stack development to solidify my foundation, then I will move
-    onto AI specific libraries to reach the above goal. </p>
-
 </body>
 
 </html>
