added select functionality for github projects

--- a/front-end/Portfolio.html
+++ b/front-end/Portfolio.html
@@ -18,19 +18,19 @@
 
 <body>
   <h1><em>Welcome to Jeremiah's Portfolio!</em></h1>
-    <!-- <label for="colorwheel" class="form-label">
+  <!-- <label for="colorwheel" class="form-label">
       <h3>Pick a Background Color</h3>
     </label>
     <input id="colorwheel" type="color" class="form-control-color" name="bkgncolor"> -->
 
-    <table class="modes">
-      <tr>
-        <td><button type="button" style="background-color: #39e3fa;"></button></td>
-        <td><button type="button" style="background-color: rgb(25, 25, 25);"></button></td>
-        <td><button type="button" style="background-color: rgb(245, 245, 245);"></button></td>
-      </tr>
-    </table>
-    
+  <table class="modes">
+    <tr>
+      <td><button type="button" style="background-color: #39e3fa;"></button></td>
+      <td><button type="button" style="background-color: rgb(25, 25, 25);"></button></td>
+      <td><button type="button" style="background-color: rgb(245, 245, 245);"></button></td>
+    </tr>
+  </table>
+
   <div class="container">
     <div class="mainParent">
       <div class="row">
@@ -40,10 +40,9 @@
             </h5>
             <select name="projects" class="form-select" style="background-color: rgb(242, 169, 65)">
               <option selected>Select Project</option>
-              <option name="Project1">A-star-PathFinding</option>
-              <option name="Project2">MazeOfAtlantis</option>
-              <option name="Project3">MultiFunction-program</option>
-              <option name="Project3">python-projects</option>
+              <option name="Project1">Most Recent</option>
+              <option name="Project2">A-star-PathFinding</option>
+              <option name="Project3">MazeOfAtlantis</option>
             </select>
           </div>
         </div>
@@ -126,7 +125,8 @@
     <br>
     <br>
     <h5><em>Goals / Objectives</em>: </h5>
-    <p class="text">Actively looking into getting myself into the Artificial Intelligence field and would like to work with
+    <p class="text">Actively looking into getting myself into the Artificial Intelligence field and would like to work
+      with
       robotics, ML/DL, expert systems, language processing and more.
       Currently building Python projects which includes Full-Stack development to solidify my foundation, then I will
       move
@@ -138,8 +138,9 @@
 
 
 
-  
-  <script src="http://code.jquery.com/jquery-3.7.0.js " integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous" ></script>
+
+  <script src="http://code.jquery.com/jquery-3.7.0.js " integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
   <!--  -->
   <script src="Portfolio_action.js">
 
