--- a/front-end/Portfolio.html
+++ b/front-end/Portfolio.html
@@ -19,12 +19,15 @@
 <body>
   <h1><em>Welcome to Jeremiah's Portfolio!</em></h1>
   <!-- Leaving this here: 1. Hidden and allow users to switch     2. Replace and use only solid colors for whole page -->
-  <!-- <label for="colorwheel" class="form-label"> 
-      <h3>Pick a Background Color</h3>
-    </label>
-    <input id="colorwheel" type="color" class="form-control-color" name="bkgncolor"> -->
+  <!--  -->
 
   <!-- User can choose default, dark or light mode -->
+
+  <!-- <button type="button" id="changeColorScheme" ></button> -->
+  <!-- <div id="colorwheel">
+    <input type="color" class="form-control-color" name="bkgncolor">
+  </div> -->
+
   <table class="modes">
     <tr>
       <td><button type="button" style="background-color: rgb(57, 227, 250);"></button></td>
