--- a/front-end/Portfolio.html
+++ b/front-end/Portfolio.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 
   <title> Jeremiah's Portfolio </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -146,7 +147,7 @@
 
 
 
-  <script src="http://code.jquery.com/jquery-3.7.0.js " integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+  <script src="https://code.jquery.com/jquery-3.7.0.js " integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"></script>
   <!--  -->
   <script src="Portfolio_action.js">
